Clean up day-4 answer a bit